[gd_scene load_steps=8 format=3 uid="uid://b40ojgxnq3w3u"]

[ext_resource type="Texture2D" uid="uid://dbwx5dnr62lm8" path="res://Assets/ChangingElements/RechargeStation.png" id="1_a8771"]
[ext_resource type="Script" path="res://src/ChangingElements/Scripts/recharge_station.gd" id="1_plpud"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y51cp"]
size = Vector2(14, 8)

[sub_resource type="Animation" id="Animation_l8edb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_2d:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_x6fi3"]
resource_name = "active"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_2d:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(9, 1)]
}

[sub_resource type="Animation" id="Animation_blmnd"]
resource_name = "inactive"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_2d:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4tsl1"]
_data = {
"RESET": SubResource("Animation_l8edb"),
"active": SubResource("Animation_x6fi3"),
"inactive": SubResource("Animation_blmnd")
}

[node name="recharge_station" type="Area2D"]
collision_mask = 2
script = ExtResource("1_plpud")

[node name="sprite_2d" type="Sprite2D" parent="."]
texture = ExtResource("1_a8771")
hframes = 10
vframes = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_y51cp")

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4tsl1")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
